manifests/istio/virtual-services.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: sa-external-services
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: application
            port:
